--- a/package.json
+++ b/package.json
@@ -10,11 +10,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.2",
+    "@expo-google-fonts/playfair-display": "^0.2.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-easy-icon": "^1.0.7",
+    "react-native-elements": "^3.4.2",
+    "react-native-ico-font-awesome": "^3.3.1",
+    "react-native-image-slider-box": "^1.1.20",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipe-up-down": "^1.1.6",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
