--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "react-native": "0.64.3",
     "react-native-easy-icon": "^1.0.7",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-ico-font-awesome": "^3.3.1",
     "react-native-image-slider-box": "^1.1.20",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "~2.3.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swipe-up-down": "^1.1.6",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
